improve exception handling